Fixed contact button so that it aligns with the rest of the contact section

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -55,6 +55,9 @@ html, body {
   background-color: white;
   padding: 60px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-title {
